@@ -31,18 +31,18 @@ namespace {
 }
 
 language_def known_languages[] = {
- 	language_def("", N_("System default language")),
-	language_def("en_GB", "British English"),
-	language_def("bg_BG", "Български"),
+	language_def("", N_("System default language")),
+	language_def("bg_BG", "Български (Bulgarski)"),
 	language_def("es_ES", "Castellano"),
 	language_def("ca_ES", "Català"),
 	language_def("cs_CZ", "Čeština"),
 	language_def("da_DK", "Dansk"),
 	language_def("de_DE", "Deutsch"),
- 	language_def("C", "English"),
+	language_def("en_GB", "English (GB)"),
+	language_def("C",     "English (hm... nearly US)"),
 	language_def("eu_ES", "Euskera"),
- 	language_def("fr_FR", "Français"),
- 	language_def("el_GR", "Greek"),
+	language_def("fr_FR", "Français"),
+	language_def("el_GR", "Ελληνικά (Ellinika)"),
 	language_def("hu_HU", "Hungarian"),
 	language_def("it_IT", "Italiano"),
 	language_def("la_IT", "Latina"),
@@ -50,7 +50,7 @@ language_def known_languages[] = {
 	language_def("no_NO", "Norsk"),
 	language_def("pl_PL", "Polski"),
 	language_def("pt_BR", "Português do Brasil"),
-	language_def("ru_RU", "Русский (Russian)"),
+	language_def("ru_RU", "Русский (Russkij)"),
 	language_def("sk_SK", "Slovenčina"),
 	language_def("sl_SL", "Slovenščina"),
 	language_def("fi_FI", "Suomi"),
